# university_timetables

./: .gitignore  PROJECT_ANALYSIS.ru.md  Plan.md  README.md  pyproject.toml  Шаблон.xlsx
config/: fit_schedule.yaml  knu_web_schedule.yaml  knu_web_smoke.yaml  manual_assets.example.yaml  manual_assets.yaml  sources.yaml
reports/: fit_structural_schedule_links.md  knu_web_run_2026-04-05.md
src/: __init__.py
src/timetable_scraper/: cli.py  config.py  discovery.py  doctor.py  export.py  fetch.py  manual_reference.py  models.py  normalize.py  ocr.py  pipeline.py  qa.py  reporting.py  utils.py
src/timetable_scraper/adapters/: __init__.py  excel.py  html.py  pdf.py
tests/: conftest.py  test_autofix.py  test_config.py  test_excel_adapter.py  test_export.py  test_fetch.py  test_fit_review_cleanup.py  test_html_and_discovery.py  test_manual_reference.py  test_normalize.py  test_normalize_orphan_metadata.py  test_normalize_rex_subject.py  test_normalize_slot_merge.py  test_normalize_split_teacher_prefix.py  test_normalize_subject_noise.py  test_normalize_teacher_lists.py  test_output_quality_regressions.py  test_pdf_adapter.py  test_pdf_continuation.py  test_phys_program_recovery.py  test_pipeline_e2e.py  test_qa_duration.py  test_reporting.py  test_utils.py
tests/fixtures/web/: faculty_links.html  faculty_table.html
tests/fixtures/workbooks/: econ.xlsx  mev.xlsx  mk.xlsx  physics_2.xlsx  pravo.xlsx  veb.xlsx
