[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timetable-scraper"
version = "0.1.0"
description = "KNU-first university timetable scraper that collects schedules from local files, faculty websites, Google Sheets/Drive, and PDFs with OCR, then exports normalized Excel workbooks."
readme = "README.md"
requires-python = ">=3.12"
keywords = [
  "timetable",
  "schedule",
  "scraper",
  "university",
  "excel",
  "google-sheets",
  "pdf",
  "ocr",
  "education",
  "knu",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "openpyxl>=3.1.5",
  "pdfplumber>=0.11.4",
  "pillow>=10.4.0",
  "pypdfium2>=4.30.0",
  "pytesseract>=0.3.13",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "xlrd>=2.0.1",
]

[project.urls]
Repository = "https://github.com/VKK-00/university_timetables"
Issues = "https://github.com/VKK-00/university_timetables/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "reportlab>=4.2.2",
]

[project.scripts]
timetable-scraper = "timetable_scraper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
